# docs/swagger.json
@@ -418,6 +418,11 @@
                 ],
                 "parameters": [
                     {
+                        "type": "string",
+                        "name": "keyword",
+                        "in": "query"
+                    },
+                    {
                         "minimum": 1,
                         "type": "integer",
                         "name": "page",
